--- a/static/less/fidouche/fidouche-main.less
+++ b/static/less/fidouche/fidouche-main.less
@@ -162,6 +162,7 @@ i.popover-trigger {
             td:nth-of-type(1):before { content: "Player"; }
             td:nth-of-type(2):before { content: "Amount"; }
             td:nth-of-type(3):before { content: "Paid?"; }
+            td:nth-of-type(4):before { content: "Delete?"; }
         }
     }
     #expenses_formset {
