--- a/static/less/fidouche/fidouche-reports.less
+++ b/static/less/fidouche/fidouche-reports.less
@@ -2,7 +2,11 @@
 #report_dates {
     margin-bottom:20px;
     button[type="submit"] {
-        margin-top:0
+        margin-top:0;
+        @media (max-width:@screen-xs-max){
+            .btn-block;
+            margin-top:12px;
+        }
     }
     .help-block {
         .hide;
@@ -13,6 +17,32 @@
     }
     .form-group {
         margin-bottom:0;
+        @media (max-width:@screen-xs-max){
+            margin-bottom:6px;
+        }
+    }
+    #payment_formset, #sub_payment_formset {
+        > tbody > tr {
+            td:nth-of-type(1):before { content: ""; }
+            td:nth-of-type(2):before { content: ""; }
+            td:nth-of-type(3):before { content: ""; }
+        }
+    }
+
+    #expenses_formset {
+        > tbody > tr {
+            td:nth-of-type(1):before { content: ""; }
+            td:nth-of-type(2):before { content: ""; }
+            td:nth-of-type(3):before { content: ""; }
+            td:nth-of-type(4):before { content: ""; }
+            td:nth-of-type(5):before { content: ""; }
+            td:nth-of-type(6):before { content: ""; }
+            td:nth-of-type(7):before { content: ""; }
+            td:nth-of-type(8):before { content: ""; }
+        }
+        .payee select {
+            width:auto;
+        }
     }
 }
 i.payment-detail-toggle {
@@ -48,28 +78,6 @@ table.table.payment-details {
     }
     .modal-footer {
         margin-top:0;
-    }
-}
-#payment_formset, #sub_payment_formset {
-    > tbody > tr {
-        td:nth-of-type(1):before { content: ""; }
-        td:nth-of-type(2):before { content: ""; }
-        td:nth-of-type(3):before { content: ""; }
-    }
-}
-#expenses_formset {
-    > tbody > tr {
-        td:nth-of-type(1):before { content: ""; }
-        td:nth-of-type(2):before { content: ""; }
-        td:nth-of-type(3):before { content: ""; }
-        td:nth-of-type(4):before { content: ""; }
-        td:nth-of-type(5):before { content: ""; }
-        td:nth-of-type(6):before { content: ""; }
-        td:nth-of-type(7):before { content: ""; }
-        td:nth-of-type(8):before { content: ""; }
-    }
-    .payee select {
-        width:auto;
     }
 }
 body.tax-report {
